Update diddledan to diddledani

--- a/static/global.css
+++ b/static/global.css
@@ -11,7 +11,7 @@ html {
 	html {
 		--app-primary-color: #f9fEf3;
 		--app-secondary-color: #a9b2b7;
-		--app-header-background-color: gray;
+		--app-header-background-color: #222222;
 		--app-drawer-selected-color: #78909C;
 		--app-section-even-color: #171717;
 		--app-section-odd-color: black;
